--- a/package.json
+++ b/package.json
@@ -9,15 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "@apollo/client": "^3.7.1",
+    "@aws-amplify/ui-react": "^4.3.5",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/font": "^13.1.6",
+    "@sendgrid/mail": "^7.7.0",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "aws-amplify": "^5.0.11",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "framer-motion": "^7.6.15",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "13.1.6",
+    "next-auth": "^4.18.10",
     "react": "18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-markdown": "^8.0.5",
+    "react-multi-carousel": "^2.8.2",
+    "react-youtube": "^10.1.0",
+    "remark-gfm": "^3.0.1",
+    "sharp": "^0.31.2"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.16.1",
+    "@graphql-codegen/client-preset": "1.2.3",
+    "@graphql-codegen/introspection": "2.2.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.9.3"
   }
 }
