--- a/package.json
+++ b/package.json
@@ -29,16 +29,21 @@
     "framer-motion": "^7.6.15",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
-    "next": "13.1.6",
-    "next-auth": "^4.18.10",
-    "react": "18.2.0",
+    "next": "^13.1.6",
+    "next-auth": "^4.19.2",
+    "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "react-multi-carousel": "^2.8.2",
     "react-youtube": "^10.1.0",
     "remark-gfm": "^3.0.1",
-    "sharp": "^0.31.2"
+    "server-only": "^0.0.1",
+    "sharp": "^0.31.2",
+    "stripe": "^11.9.1",
+    "uglify-js": "^3.17.4",
+    "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.16.1",
