--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@graphql-codegen/cli": "2.16.1",
     "@graphql-codegen/client-preset": "1.2.3",
     "@graphql-codegen/introspection": "2.2.3",
+    "@types/jquery": "^3.5.16",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
