--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@aws-amplify/ui-react": "^4.3.5",
+    "@aws-sdk/client-dynamodb": "^3.272.0",
+    "@aws-sdk/lib-dynamodb": "^3.272.0",
+    "@fortawesome/fontawesome-common-types": "^6.3.0",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/dynamodb-adapter": "^3.0.0",
     "@next/font": "^13.1.6",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "aws-amplify": "^5.0.11",
+    "aws-crt": "^1.15.9",
+    "aws-sdk": "^2.1317.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
